--- a/finter-html/css/style.scss
+++ b/finter-html/css/style.scss
@@ -33,7 +33,8 @@ $textCol: #1f1f1f;
 
 
 body {
-  @include main-font;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
   color: #0c0c0c;
   background-color: #ffffff;
   overflow-x: hidden;
@@ -304,7 +305,6 @@ a:focus {
     height: 4px;
     background-color: $white;
     margin: 7px 0;
-    transition: all 0.3s;
     position: relative;
     border-radius: 5px;
     transition: all .3s;
@@ -555,7 +555,6 @@ a:focus {
       border-radius: 100%;
       margin: 0 2px;
       background-color: #ccc;
-      border: none;
       outline: none;
 
       &.active {
@@ -747,7 +746,7 @@ a:focus {
   .carousel-control-next {
     width: 50px;
     height: 50px;
-    border-radius: 0px;
+    border-radius: 0;
     background-color: $black;
     opacity: 1;
     top: 28%;
