--- a/finter-html/css/style.css
+++ b/finter-html/css/style.css
@@ -753,7 +753,7 @@ a:focus {
 }
 
 .contact_section .form_container {
-    padding: 45px;
+    padding: 15px;
 }
 
 .contact_section .form_container .form-control {
@@ -1042,6 +1042,7 @@ a:focus {
     margin-top: 20px;
     padding-left: 0 !important;
     padding-right: 0;
+    padding-bottom: 0;
     width: 100%;
 }
 
