contact - some aria labels. team - paddings edited

--- a/finter-html/css/style.css
+++ b/finter-html/css/style.css
@@ -1046,4 +1046,9 @@ a:focus {
     width: 100%;
 }
 
+.is-hidden {
+  visibility: hidden;
+  pointer-events: none;
+  position: absolute;
+}
 /*# sourceMappingURL=style.css.map */
