--- a/finter-html/css/style.css
+++ b/finter-html/css/style.css
@@ -495,11 +495,11 @@ a:focus {
 }
 
 .service_section .box {
-    margin: 10px;
+    margin: 8px;
     text-align: center;
     -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.15);
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.15);
-    padding: 25px 15px;
+    padding: 25px 10px;
     -webkit-transition: all .3s;
     transition: all .3s;
     display: -webkit-box;
@@ -514,24 +514,26 @@ a:focus {
     align-items: center;
 }
 
-@media (max-width: 1199px) {
-    .service_section .box {
-        height: 320px;
-        padding-bottom: 15px;
-    }
-}
 
-@media (min-width: 1200px) {
-    .service_section .box {
-        height: 420px;
-        padding-bottom: 20px;
-    }
-}
 
 
 .service_section .box .img-box {
     width: 65px;
     height: 65px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.service_section .box .img-box2 {
+    width: 55px;
+    height: 55px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -616,6 +618,11 @@ a:focus {
 }
 
 .service_section .owl-stage .owl-item.active.center .box .img-box img {
+    -webkit-filter: brightness(0) invert(1);
+    filter: brightness(0) invert(1);
+}
+
+.service_section .owl-stage .owl-item.active.center .box .img-box2 img {
     -webkit-filter: brightness(0) invert(1);
     filter: brightness(0) invert(1);
 }
